<resources>

    <string name="descripcioncontenidos"></string>

    <string name="app_name">HELP-PETS</string>
    <string name="botonesprincipales">botonesprincipales</string>
    <string name="mascotas">Enfermedades De Mascotas</string>
    <string name="ubicacion">Ubicacion Veterinarias</string>
    <string name="vacunas">Registro De Vacunas</string>
    <string name="pedirayuda">Pedir Ayuda</string>
    <string name="registromascotas">Registro De Mascotas</string>
    <string name="dietas">Dietas Recomendadas</string>
    <string name="dietas2">DIETAS RECOMENDADAS</string>
    <string name="helpets">HELP-PETS</string>
    <string name="enfermedades">ENFERMEDADES</string>
    <string name="perros">Perros</string>
    <string name="gatos">Gatos</string>
    <string name="aves">Aves</string>
    <string name="peces">Peces</string>
    <string name="hamnsters">Hamnters</string>
    <string name="pedirayuda2">PEDIR AYUDA</string>




    <string name="seleccione">SELECCIONE UNA ENFERMEDAD DE LA LISTA</string>

    <string name="descripcion">DESCRIPCION</string>
    <string name="sintomas">SINTOMAS</string>
    <string name="cuidado">TRATAMIENTO</string>
    <string name="representacion">REPRESENTACION</string>

    <!--Enfermedades Perros-->
    <string name="enfperros">Enfermedades De Perros</string>
    <string name="ep1">Parviovirus</string>
    <string name="ep2">Moquillo</string>
    <string name="ep3">Artrosis</string>
    <string name="ep4">Otitis</string>
    <string name="ep5">Leishmaniosis</string>
    <string name="ep6">Gusano del corazon</string>
    <string name="ep7">Tos de las perreras</string>
    <string name="ep8">Problemas urinarios</string>
    <string name="ep9">Problemas digestivos</string>
    <string name="ep10">Problemas de piel</string>
    <string name="ep11">Hepatitis</string>
    <string name="ep12">Rabia</string>

    <!--Enfermedades Gatos-->
    <string name="enfgatos">Enfermedades De Gatos</string>
    <string name="eg1">Leucemia</string>
    <string name="eg2">Panleucopenia</string>
    <string name="eg3">Insuficiencia renal</string>
    <string name="eg4">Inmunodeficiencia</string>
    <string name="eg5">Otitis</string>
    <string name="eg6">Conjuntivitis</string>
    <string name="eg7">Rabia</string>
    <string name="eg8">Peritonitis</string>
    <string name="eg9">Cistitis</string>

<!--    Enfermedades Aves-->
<!--    <string name="enfaves">Enfermedades De Aves</string>-->
<!--    <string name="ea1">Colera</string>-->
<!--    <string name="ea2">Coriza</string>-->
<!--    <string name="ea3">Bronquitis</string>-->
<!--    <string name="ea4">Encefalomielitis</string>-->
<!--    <string name="ea5">Influenza</string>-->
<!--    <string name="ea6">Bursitis</string>-->
<!--    <string name="ea7">Enfermedad de marek</string>-->
<!--    <string name="ea8">New castle</string>-->
<!--    <string name="ea9">Viruela</string>-->

    <!--Enfermedades Aves-->
    <string name="enfaves">Enfermedades De Aves</string>
    <string name="ea1">Coccidiosis</string>
    <string name="ea2">Aspergilosis</string>
    <string name="ea3">Escherichia Coli</string>
    <string name="ea4">Salmonelosis</string>
    <string name="ea5">Colibacilosis</string>
    <string name="ea6">Estrés</string>
    <string name="ea7">Anemia</string>
    <string name="ea8">Quistes foliculares</string>
    <string name="ea9">Ornitosis</string>

    <!--Enfermedades Peces-->
    <string name="enfpeces">Enfermedades De Peces</string>
    <string name="epe1">Hidropesia</string>
    <string name="epe2">Terciopelo</string>
    <string name="epe3">Gusano lernaea</string>
    <string name="epe4">Punto blanco</string>
    <string name="epe5">Dactylogyrus</string>
    <string name="epe6">Baba en la piel</string>
    <string name="epe7">Estreñimiento</string>
    <string name="epe8">Parasitos intestinales</string>
    <string name="epe9">Exophthalmia</string>
    <string name="epe10">Hexamiatiasis</string>
    <string name="epe11">Vejiga natatoria</string>

    <!--Enfermedades Hamsters-->
    <string name="enfhamnsters">Enfermedades De Hamnsters</string>
    <string name="eh1">Diabetes</string>
    <string name="eh2">Cola mojada</string>
    <string name="eh3">Acaros</string>
    <string name="eh4">Tiña</string>
    <string name="eh5">Conjuntivitis</string>
    <string name="eh6">Estreñimiento</string>
    <string name="eh7">Calculos en la vejiga</string>
    <string name="eh8">Cataratas</string>
    <string name="eh9">Abscesos</string>

    <!--Registro Mascotas-->
    <string name="registromascotas2">REGISTRO DE MASCOTAS</string>
    <string name="codigomascota">Codigo De Identificación</string>
    <string name="nombremascota">Nombre De La Mascota</string>
    <string name="tipomascota">Tipo De Mascota(Perro, Gato, Ave, Pez o Hamnster)</string>
    <string name="sexomascota">Sexo De La Mascota(Macho o Hembra)</string>
    <string name="fechanacimiento">Fecha De Nacimiento</string>
    <string name="razamascota">Raza De La Mascota</string>
    <string name="agregarma">AGREGAR</string>
    <string name="modificarma">MODIFICAR</string>
    <string name="eliminarma">ELIMINAR</string>
    <string name="buscarma">BUSCAR</string>

    <!--Registro vacunas-->
    <string name="registrovacunas">REGISTRO DE VACUNAS</string>
    <string name="nombremascota2">Nombre De La Mascota</string>
    <string name="tipomascota2">Tipo De Mascota(Perro, Gato, Ave, Pez o Hamnster)</string>
    <string name="nombrevacuna"> Nombre De La Vacuna</string>
    <string name="fechavacunacion">Fecha Vacunacion</string>
    <string name="sexomascota2">Sexo De La Mascota(Macho o Hembra)</string>
    <string name="fechanacimiento2">Fecha De Nacimiento</string>
    <string name="agregarv">AGREGAR</string>
    <string name="modificarv">MODIFICAR</string>
    <string name="eliminarv">ELIMINAR</string>
    <string name="buscarv">BUSCAR</string>


    <!--Pedir ayuda-->
    <string name="wtp">WHATSAPP</string>
    <string name="wtomsg">Escriba Su Mensaje</string>
    <string name="enviarmsgw">Enviar Mensaje</string>
    <string name="gmail">GMAIL</string>
    <string name="desti">Destinatario</string>
    <string name="asunt">Asunto</string>
    <string name="mensaje">Mensaje</string>

    <!--ubicacion veterinarias-->
    <string name="title_activity_ubicacionveterinarias">Map</string>

    <!--botones actionbar-->
    <string name="eliminar"></string>
    <string name="editar"></string>
    <string name="buscar"></string>

    <!--Dieta perro-->
    <string name="dietaperro">DIETAS PARA PERROS</string>
    <string name="algas">Algas</string>
    <string name="calamares">Calamares</string>
    <string name="carne">Carnes</string>
    <string name="espirulina">Espirulina</string>
    <string name="huevos">Huevos</string>
    <string name="melocoton">Melocoton</string>
    <string name="moras">Moras</string>
    <string name="pepino">Pepino</string>
    <string name="zanahorias">Zanahorias</string>

    <!--Dieta gato-->
    <string name="dietagato">DIETAS PARA GATOS</string>
    <string name="dg1">Salmon</string>
    <string name="dg2">Aceites de pescado</string>
    <string name="dg3">Huevos cocidos</string>
    <string name="dg4">Queso</string>
    <string name="dg5">Pollo</string>
    <string name="dg6">Pavo</string>
    <string name="dg7">Vegetales variados</string>

    <!--Dieta ave-->
    <string name="dietaave">DIETAS PARA AVES</string>
    <string name="da1">Brocoli</string>
    <string name="da2">Zanahorias</string>
    <string name="da3">Arvejas</string>
    <string name="da4">Manzana</string>


    <!--Dieta pez-->
    <string name="dietapez">DIETAS PARA PECES</string>
    <string name="dpe1">Espinaca</string>
    <string name="dpe2">Carnes de moluscos</string>
    <string name="dpe3">Granulos</string>

    <!--Dieta Hamnster-->
    <string name="dietahamnster">DIETAS PARA HAMNSTERS</string>
    <string name="dh1">Zanahorias</string>
    <string name="dh2">Nueces</string>
    <string name="dh3">Cebada</string>
    <string name="dh4">Espinaca</string>
    <string name="dh5">Avellanas</string>


</resources>