<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFB9B9"
    tools:context=".perros">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:fontFamily="cursive"
        android:text="@string/enfperros"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="93dp"
        android:text="@string/seleccione" />

    <ScrollView
        android:layout_width="358dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/ep1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep1" />

            <Button
                android:id="@+id/ep2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="ep2"
                android:text="@string/ep2" />

            <Button
                android:id="@+id/ep3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep3" />

            <Button
                android:id="@+id/ep4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep4" />

            <Button
                android:id="@+id/ep5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep5" />

            <Button
                android:id="@+id/ep6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep6" />

            <Button
                android:id="@+id/ep7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep7" />

            <Button
                android:id="@+id/ep8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep8" />

            <Button
                android:id="@+id/ep9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep9" />

            <Button
                android:id="@+id/ep10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep10" />

            <Button
                android:id="@+id/ep11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep11" />

            <Button
                android:id="@+id/ep12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ep12" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="364dp"
        android:layout_height="251dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/descripcion"
                android:textAlignment="center"
                android:textColor="#1B0F0F"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Sintomas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/sintomas"
                android:textAlignment="center"
                android:textColor="#130C0C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Cuidado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/cuidado"
                android:textAlignment="center"
                android:textColor="#190D0D"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/representacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/representacion"
                android:textAlignment="center"
                android:textColor="#1B0F0F"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/botonrepresentacion"
                android:layout_width="match_parent"
                android:layout_height="114dp"
                android:contentDescription="@string/descripcioncontenidos"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>