<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECCDCD"
    tools:context=".perros">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:fontFamily="cursive"
        android:text="@string/enfhamnsters"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#6A5454" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="118dp"
        android:text="@string/seleccione"
        android:textColor="#6A5454" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="141dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#000000"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ep1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:text="@string/eh1"
                android:textColor="#6A5454" />

            <Button
                android:id="@+id/ep2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:text="@string/eh2"
                android:textColor="#6A5454" />

            <Button
                android:id="@+id/ep3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:textColor="#6A5454"
                android:text="@string/eh3" />

            <Button
                android:id="@+id/ep4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:textColor="#6A5454"
                android:text="@string/eh4" />

            <Button
                android:id="@+id/ep5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:textColor="#6A5454"
                android:text="@string/eh5" />

            <Button
                android:id="@+id/ep6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:textColor="#6A5454"
                android:text="@string/eh6" />

            <Button
                android:id="@+id/ep7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:textColor="#6A5454"
                android:text="@string/eh7" />

            <Button
                android:id="@+id/ep8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:textColor="#6A5454"
                android:text="@string/eh8" />

            <Button
                android:id="@+id/ep9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ECCDCD"
                android:textColor="#6A5454"
                android:text="@string/eh9" />


        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="361dp"
        android:layout_height="386dp"
        android:layout_below="@+id/textView26"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/descripcion"
                android:textAlignment="center"
                android:textColor="#6A5454"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#6A5454"/>

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Sintomas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/sintomas"
                android:textAlignment="center"
                android:textColor="#6A5454"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#6A5454"/>

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Cuidado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/cuidado"
                android:textAlignment="center"
                android:textColor="#6A5454"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#6A5454"/>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/representacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/representacion"
                android:textAlignment="center"
                android:textColor="#6A5454"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/botonrepresentacion"
                android:layout_width="match_parent"
                android:layout_height="114dp"
                android:contentDescription="@string/descripcioncontenidos"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>