<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vacunas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:background="#CFB9B9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:fontFamily="cursive"
            android:text="@string/registrovacunas"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/idnombremascota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombremascota2"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#5C4545" />

        <TextView
            android:id="@+id/idtipomascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipomascota2"
            android:textAlignment="center"
            android:textColor="#5C4545"
            android:textColorHint="#FFFFFF" />

        <Spinner
            android:id="@+id/spinnertipomascota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/idnombrevacuna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombrevacuna"
            android:inputType="textPersonName"
            android:textColorHint="#5C4545"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/idfechanacimiento2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fechavacunacion"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColorHint="#5C4545" />

        <TextView
            android:id="@+id/sexomascota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexomascota2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#5C4545" />

        <Spinner
            android:id="@+id/spinnersexomascota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/idfechanacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fechanacimiento2"
            android:inputType="date"
            android:textColorHint="#5C4545"
            android:importantForAutofill="no" />
    </LinearLayout>
</RelativeLayout>